--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="navBar" id="navBar">
+      <img src="./ecommerece.png" alt="">
+    </div>
     <div class="main" id="main"></div>
     <script src="./script.js"></script>
   </body>
