--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="navBar" id="navBar">
-      <img src="./ecommerece.png" alt="">
-    </div>
+    <div class="nav" id="nav"></div>
     <div class="main" id="main"></div>
     <script src="./script.js"></script>
   </body>
