--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div class="main" id="main"></div>
+    <footer id="main_footer">
+      <!-- <div id="second_footer"></div>
+      <div id="third_footer"></div> -->
+    </footer>
+
     <script src="./script.js"></script>
   </body>
 </html>
