footer created completely

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <div class="nav" id="nav"></div>
     <div class="main" id="main"></div>
+    <div class="footer" id="footer"></div>
+
     <script src="./script.js"></script>
   </body>
 </html>
